white space fixed

--- a/app/public/css/text.css
+++ b/app/public/css/text.css
@@ -55,7 +55,9 @@
     .writting_display {
         position: relative;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        /* min-height: 500px; */
         display: flex;
+        flex: 1;
     }
     #text_side_navi {
         background-color: rgb(0, 139, 139, 0.2);
@@ -106,8 +108,12 @@
     }
 }
 
-#editorr {
+#editorr .ql-editor {
     font-family: 'Fredericka the Great';
+    /* white-space: pre; */
+}
+
+#text_content .ql-editor{
     white-space: pre;
 }
 
